0.3.0
  BugFix in GhostBSD and TrueOS repo guessing;
  BugFix: pkg clean cache was not working.
  BugFix: Package list does not flashes at program startup.
  BugFix: Do not offer to open "LSB relocatable" files at File tab.
  BugFix: anchor output when pkg list is empty.
  BugFix: TransactionDialog was size constrained.
  Added plasma5 support.
  Abort show file content when file list is greater than 1MB of text.
  Changed F12 key behaviour to F11.
  Added the option to terminate the current transaction being executed, by pressing 
	"Ctrl+Z".
  Added "pkg clean" support (Ctrl+Shift+C and menu item).
  Now the size of TransactionDialog is saved between calls.
  Now tab Files shows progress bar while building pkg list.

0.2.0
  BugFix: anchor navigation fixes.
  BugFix: the name of some dependencies were not being shown correctly.
  BugFix: list of dependencies was not sorted.
  BugFix: outdated pkg list was not sorted.
  BugFix: When user closed searchbar inside a QTextBrowser, cursor position was reseted.
  BugFix: Do not refresh pkg lists while clicking remote/local buttons.
  BugFix: Fix gksu "-- f parameter" execution error.
  BugFix: When trying to install a Ports pkg not available in database, shows error 
	(thanks to asxbsd).
  BugFix: List of outdated packages not being retrieved in some cases.
  Let user removes any automatic installed package.
  Remove commands now use -R option.
  Added DragonFlyBSD support.
  Added GhostBSD support (thanks to ringo32 and rkramerbsd). 
  Added search feature also in Information tab.
  Heavily threaded version, minimizing interface freezing.

0.1.0 
  Initial Proof of Concept release.